--- a/SistemaRestify/SistemaRestify.csproj
+++ b/SistemaRestify/SistemaRestify.csproj
@@ -70,6 +70,12 @@
     <Compile Include="FrmLoginMesero.Designer.cs">
       <DependentUpon>FrmLoginMesero.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmTeclado.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmTeclado.Designer.cs">
+      <DependentUpon>FrmTeclado.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FrmLogin.resx">
@@ -77,6 +83,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmLoginMesero.resx">
       <DependentUpon>FrmLoginMesero.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmTeclado.resx">
+      <DependentUpon>FrmTeclado.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
