--- a/SistemaRestify/SistemaRestify.csproj
+++ b/SistemaRestify/SistemaRestify.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -58,6 +58,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DatosClienteAdministrativo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DatosClienteAdministrativo.Designer.cs">
+      <DependentUpon>DatosClienteAdministrativo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmBuscarCliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmBuscarCliente.Designer.cs">
+      <DependentUpon>FrmBuscarCliente.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,13 +82,37 @@
     <Compile Include="FrmLoginMesero.Designer.cs">
       <DependentUpon>FrmLoginMesero.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmPedidoRapido.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmPedidoRapido.Designer.cs">
+      <DependentUpon>FrmPedidoRapido.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PagarAdministrativo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PagarAdministrativo.Designer.cs">
+      <DependentUpon>PagarAdministrativo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="DatosClienteAdministrativo.resx">
+      <DependentUpon>DatosClienteAdministrativo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmBuscarCliente.resx">
+      <DependentUpon>FrmBuscarCliente.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmLoginMesero.resx">
       <DependentUpon>FrmLoginMesero.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmPedidoRapido.resx">
+      <DependentUpon>FrmPedidoRapido.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PagarAdministrativo.resx">
+      <DependentUpon>PagarAdministrativo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
