--- a/SistemaRestify/SistemaRestify.csproj
+++ b/SistemaRestify/SistemaRestify.csproj
@@ -70,6 +70,30 @@
     <Compile Include="FrmBuscarCliente.Designer.cs">
       <DependentUpon>FrmBuscarCliente.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmBuscarClienteM.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmBuscarClienteM.Designer.cs">
+      <DependentUpon>FrmBuscarClienteM.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmCambiarMesero.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmCambiarMesero.Designer.cs">
+      <DependentUpon>FrmCambiarMesero.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmCapturarPedido.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmCapturarPedido.Designer.cs">
+      <DependentUpon>FrmCapturarPedido.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmDetalleCuenta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmDetalleCuenta.Designer.cs">
+      <DependentUpon>FrmDetalleCuenta.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,11 +106,29 @@
     <Compile Include="FrmLoginMesero.Designer.cs">
       <DependentUpon>FrmLoginMesero.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmMenuOpciones.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmMenuOpciones.Designer.cs">
+      <DependentUpon>FrmMenuOpciones.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmPedidoRapido.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FrmPedidoRapido.Designer.cs">
       <DependentUpon>FrmPedidoRapido.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmPedidos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmPedidos.Designer.cs">
+      <DependentUpon>FrmPedidos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmReservaciones.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmReservaciones.Designer.cs">
+      <DependentUpon>FrmReservaciones.cs</DependentUpon>
     </Compile>
     <Compile Include="PagarAdministrativo.cs">
       <SubType>Form</SubType>
@@ -102,14 +144,35 @@
     <EmbeddedResource Include="FrmBuscarCliente.resx">
       <DependentUpon>FrmBuscarCliente.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmBuscarClienteM.resx">
+      <DependentUpon>FrmBuscarClienteM.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmCambiarMesero.resx">
+      <DependentUpon>FrmCambiarMesero.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmCapturarPedido.resx">
+      <DependentUpon>FrmCapturarPedido.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmDetalleCuenta.resx">
+      <DependentUpon>FrmDetalleCuenta.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmLoginMesero.resx">
       <DependentUpon>FrmLoginMesero.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmMenuOpciones.resx">
+      <DependentUpon>FrmMenuOpciones.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmPedidoRapido.resx">
       <DependentUpon>FrmPedidoRapido.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmPedidos.resx">
+      <DependentUpon>FrmPedidos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmReservaciones.resx">
+      <DependentUpon>FrmReservaciones.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PagarAdministrativo.resx">
       <DependentUpon>PagarAdministrativo.cs</DependentUpon>
